# temperature

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: data_analysis.zip.016
docs/: Makefile  conf.py  example.ipynb  make.bat
python_scripts/: 03-29-24_plots.ipynb  08-09-24_plots.ipynb  08-16-24_plots.ipynb  08-23-24_plots.ipynb  09-20-24_plots.ipynb  11-04-22_plots.ipynb  assign_correct_cycle_numbers_03-29-24.ipynb  assign_correct_cycle_numbers_08-09-24.ipynb  assign_correct_cycle_numbers_08-16-24.ipynb  assign_correct_cycle_numbers_08-23-24.ipynb  assign_correct_cycle_numbers_08-28-24.ipynb  assign_correct_cycle_numbers_09-20-24.ipynb  assign_correct_cycle_numbers_10-28-22.ipynb  assign_correct_cycle_numbers_11-04-22.ipynb  assign_correct_cycle_numbers_11-11-22.ipynb  calculate_periods.ipynb  calculate_position_and_radius_features.ipynb  combine_clean_peaks_troughs.ipynb  data_curation_app.py  plot_all_controls_together.ipynb  process_trackmate_result.py
src/droplet_temperature_analysis/: __init__.py
src/temperature/: __init__.py  droplet_temperature_analysis.py  temperature.py
temperature_perturbations/: morpholino_simulations.ipynb  temperaturemodels.py
tests/: test_droplet_temperature_analysis.py  test_temperature.py
