[tool.poetry]
name = "droplet_temperature_analysis"
version = "0.1.0"
description = "Image and data processing of droplet temperature experiments"
authors = ["Franco Tavella"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
