[tool.poetry]
name = "temperature"
version = "0.1.0"
description = "Image and data analysis tools for studying the role of temperature on cell cycle dynamics"
authors = ["Franco Tavella"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
